feedback for getting started

--- a/public/getting-started-ansible/index.html
+++ b/public/getting-started-ansible/index.html
@@ -25,7 +25,7 @@
                   id="getting-started-ansible"
                   title="Getting started with Ansible"
                   environment="web"
-                  feedback-link="">
+                  feedback-link="https://fteychene.github.io/cloud-101-course/">
     
       <google-codelab-step label="Ansible" duration="0">
         <p>Ansible is an IT automation tool. It can configure systems, deploy software, and orchestrate more advanced IT tasks such as continuous deployments or zero downtime rolling updates.</p>
