fixup! feedback for getting started

--- a/public/getting-started-vagrant/index.html
+++ b/public/getting-started-vagrant/index.html
@@ -25,7 +25,7 @@
                   id="getting-started-vagrant"
                   title="Getting started with Vagrant"
                   environment="web"
-                  feedback-link="https://fteychene.github.io/cloud-101-course/">
+                  feedback-link="">
     
       <google-codelab-step label="Installation" duration="0">
         <p>Installation instruction can be found on <a href="https://www.vagrantup.com/downloads.html" target="_blank">this page</a></p>
