fixup! feedback for getting started

--- a/public/getting-started-kubernetes/index.html
+++ b/public/getting-started-kubernetes/index.html
@@ -25,7 +25,7 @@
                   id="getting-started-kubernetes"
                   title="Getting Started with Kubernetes"
                   environment="web"
-                  feedback-link="https://fteychene.github.io/cloud-101-course/">
+                  feedback-link="">
     
       <google-codelab-step label="Setup" duration="0">
         <p>In this hands-on we will work using <a href="https://k3s.io/" target="_blank">k3s</a>, it&#39;s a lightweight Kubernetes distribution easy to install.<br> We will not work with vanilla kubernetes as its installation could be challenging.</p>
