fixup! fixup! feedback for getting started

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@ c121 -70 225 -127 231 -127 7 1 111 58 232 128 l219 127 358 875 358 875 -3
             
             <a
               class="link link-ansible sm:px-24 min-w-full py-2 mb-3 text-lg rounded"
-              href="getting-started-ansible/index.html&amp;index=cloud-101-course"
+              href="getting-started-ansible/index.html?index=cloud-101-course"
               target="_blank"
               
               rel="me noopener noreferrer"
